修改文件夹读写

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
-data/
-model/
-tmp/
+data/*
+!data/.gitkeep
+model/*
+!model/.gitkeep
+tmp/*
+!tmp/.gitkeep
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
